themes/ta-portfolio/src/scss/style.scss
/* LAYOUT */
@import "reset";
@import "variables";
@import "fonts";
@import "theme";
@import "responsive";
@import "grid";
@import "navigation";
@import "components/figure";
@import "components/table";
@import "components/publication-mockup";
$font-family-sans: "Basel Grotesk", "Helvetica Neue", Arial, sans-serif;
$font-family-serif: "Untitled Serif", "Tiempos Text";

body {
    margin: 0 auto;
}

$site-padding-side: 75px;

.site {
    padding: 50px $site-padding-side;
    @include main-grid();
    @include breakpoint($xs) {
        padding: 20px 15px;
    }
    min-height: 100vh;

    // General color settings
    // transition: background-color 0.7s;
    @include themed() {
        color: t($text);
        background: t($bg);
        border-color: t($border);
    }

    // General font settings
    font-family: $font-family-sans;
    font-style: normal;
    font-weight: 400;
    font-size: 1.4rem;
    line-height: 1.5;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

$gap: 0.5rem; //calc(12/1680 * 100vw);

main {
    // display: flex;
    // grid-template-columns: repeat(14,1fr);
    // grid-column-gap: 20px;
    // grid-row-gap: 20px;
    display: grid;
    grid-template-columns: subgrid;
    grid-column: 1 / #{$num-columns + 1};

    @include breakpoint($xs) {
        & > * {
            grid-column: 1 / #{$num-columns} !important;
        }
    }

    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
        // display: none;
        margin: 0;
        //grid-column: 1 / #{$start-main};
        //grid-column: #{$start-main} / #{$end-main};
    }

    h1 {
        font-weight: 400;
        font-size: 3.5rem;
        line-height: 3.5rem;
        grid-column: #{$start-main} / #{$end-main};
        //text-transform: uppercase;
    }

    h2 {
        font-weight: 400;
        font-size: 1.4rem;
        line-height: 1.5;
        text-transform: uppercase;
        grid-column: #{$start-main} / #{$end-main};
    }

    a {
        text-decoration: none;
    }

    p {
        // width: calc(100% - (6 * (100% / 12) + 0.6 * #{$gap}));
        // margin-left: calc(4 * (100% / 12) + 0.4 * (12/1680 * 100vw));
        grid-column: #{$start-main} / #{$end-main};
    }

    div,
    ul {
        grid-column: 1 / #{$end-main + 2};
    }

    .gallery {
        grid-column: #{$start-main} / #{$end-main + 1};
    }

    // .aside {
    //   grid-column: #{$end-main} / #{$num-columns + 1};
    //   grid-row: 1 / span 2;
    //   position: sticky;
    //   top: 25px;
    // }

    .feature-image {
        grid-column: #{$start-main} / #{$end-main + 2};
        margin-bottom: 25px;
    }

    p > a {
        color: $blue;
        &:after {
            // font-family: $font-family-arrows;
            content: "↗︎";
            padding-left: 2px;
        }
        &:hover {
            border-bottom: 1px solid $blue;
        }
    }

    ul {
        list-style: none;
        padding: 0;
        li {
            display: flex;
            justify-content: space-between;
            border-bottom: 1px solid;
            @include themed() {
                border-color: t($border);
            }
        }
    }
}
/* ... */

